Fix suggest products for export