@@ -1,7 +1,11 @@
 package com.wha.warehousemanagement.services;
 
 import com.wha.warehousemanagement.dtos.requests.ExportDetailRequest;
+import com.wha.warehousemanagement.dtos.requests.SuggestedExportProductsRequest;
 import com.wha.warehousemanagement.dtos.responses.ExportDetailResponse;
+import com.wha.warehousemanagement.dtos.responses.ExportResponse;
+import com.wha.warehousemanagement.dtos.responses.ProductResponse;
+import com.wha.warehousemanagement.dtos.responses.SuggestedExportProductsResponse;
 import com.wha.warehousemanagement.exceptions.CustomException;
 import com.wha.warehousemanagement.exceptions.ErrorCode;
 import com.wha.warehousemanagement.mappers.ExportDetailMapper;
@@ -14,7 +18,9 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -26,6 +32,7 @@ public class ExportDetailService {
     private final ProductMapper productMapper;
     private final ExportRepository exportRepository;
     private final ProductRepository productRepository;
+    private final InventoryRepository inventoryRepository;
 
     public ResponseObject<?> getAllExportDetails() {
         try {
@@ -133,65 +140,98 @@ public class ExportDetailService {
         return exportDetail;
     }
 
-//    public ResponseObject<?> suggestExportInventory(List<ExportDetailRequest> requests) {
-//        try {
-//            Map<Integer, List<Inventory>> inventoryMap = new HashMap<>();
-//
-//            // find all product inventories and put it in the map
-//            requests.forEach(request -> {
-//                List<Inventory> inventories = inventoryRepository.findByProductIdOrderByExpiredAtAsc(request.getProductId());
-//                inventoryMap.put(request.getProductId(), inventories);
-//            });
-//
-//            List<ExportDetailResponse> suggestedDetails = new ArrayList<>();
-//
-//            // loop through the requests and find the suggested details
-//            for (ExportDetailRequest request : requests) {
-//                List<Inventory> inventories = inventoryMap.get(request.getProductId());
-//
-//                if (inventories == null || inventories.isEmpty()) {
-//                    throw new CustomException(ErrorCode.INVENTORY_NOT_FOUND);
-//                }
-//
-//                int quantityToExport = request.getQuantity();
-//
-//                // loop through the inventories and find the suggested details
-//                for (Inventory inventory : inventories) {
-//
-//                    ProductResponse product = productMapper.toDto(productRepository.findById(request.getProductId())
-//                            .orElseThrow(() -> new CustomException(ErrorCode.PRODUCT_NOT_FOUND)));
-//
-//                    ExportResponse export = exportMapper.toDto(exportRepository.findById(request.getExportId())
-//                            .orElseThrow(() -> new CustomException(ErrorCode.EXPORT_NOT_FOUND)));
-//
-//                    // if the quantity to export is less than the quantity in the inventory
-//                    if (inventory.getQuantity() >= quantityToExport) {
-//                        suggestedDetails.add(new ExportDetailResponse(null, export,
-//                                product,
-//                                quantityToExport,
-//                                inventory.getZone() == null ? null : inventory.getZone().getName(),
-//                                inventory.getExpiredAt())); // thêm expiredAt
-//                        break;
-//                    } else {
-//                        // if the quantity to export is greater than the quantity in the inventory
-//                        suggestedDetails.add(new ExportDetailResponse(null, export,
-//                                product,
-//                                inventory.getQuantity(),
-//                                inventory.getZone() == null ? null : inventory.getZone().getName(),
-//                                inventory.getExpiredAt())); // thêm expiredAt
-//                        quantityToExport -= inventory.getQuantity();
-//                    }
-//
-//                }
-//            }
-//
-//            return new ResponseObject<>(HttpStatus.OK.value(), "Suggested export details", suggestedDetails);
-//        } catch (CustomException e) {
-//            return new ResponseObject<>(e.getErrorCode().getCode(), e.getMessage(), null);
-//        } catch (Exception e) {
-//            return new ResponseObject<>(HttpStatus.BAD_REQUEST.value(), "Failed to suggest export details", null);
-//        }
-//    }
+    public ResponseObject<List<SuggestedExportProductsResponse>> suggestExportInventory(List<SuggestedExportProductsRequest> requests) {
+        // request se la nhan vao 1 list cac product kem theo quantity.
+        // request co warehouseId de xac dinh kho hang can lay hang
+        try {
+            // Map lưu trữ các inventory của mỗi product trong warehouse cụ thể
+            Map<Integer, List<Inventory>> inventoryMap = new HashMap<>();
+
+            // Vòng lặp để lấy ra các inventory của mỗi product theo warehouseId và sắp xếp theo expiredAt
+            requests.forEach(request -> {
+                List<Inventory> inventories = inventoryRepository.findByProductIdAndWarehouseIdOrderByExpiredAtAsc(
+                        request.getProductId(), request.getWarehouseId());
+                inventoryMap.put(request.getProductId(), inventories);
+            });
+
+            // Kết quả gợi ý sẽ được lưu vào danh sách suggestedDetails
+            List<SuggestedExportProductsResponse> suggestedDetails = new ArrayList<>();
+
+            // Vòng lặp để xử lý từng request
+            for (SuggestedExportProductsRequest request : requests) {
+                List<Inventory> inventories = inventoryMap.get(request.getProductId());
+
+                int totalQuantityInWarehouse = inventoryRepository.countTotalQuantityByProductIdAndWarehouseId(request.getProductId(), request.getWarehouseId());
+                if(totalQuantityInWarehouse < request.getQuantity()){
+                    // Nếu số lượng tồn kho không đủ để xuất thì trả về thông báo
+                    suggestedDetails.add(new SuggestedExportProductsResponse(
+                            null,
+                            "Không đủ hàng",
+                            null,
+                            totalQuantityInWarehouse,
+                            null,
+                            null
+                    ));
+                    continue;
+                }
+
+                if (inventories == null || inventories.isEmpty()) {
+                    throw new CustomException(ErrorCode.INVENTORY_NOT_FOUND);
+                }
+
+                // Yêu cầu số lượng cần xuất
+                int quantityToExport = request.getQuantity();
+                List<Inventory> tempInventories = new ArrayList<>(inventories);
+
+                // Sắp xếp inventory theo quantity giảm dần và expiredAt tăng dần
+                tempInventories.sort((i1, i2) -> {
+                    // Nếu quantity khác nhau thì sắp xếp theo quantity giảm dần
+                    if (!i2.getQuantity().equals(i1.getQuantity())) {
+                        return i2.getQuantity() - i1.getQuantity();
+                    } else {
+                        // Nếu quantity bằng nhau thì sắp xếp theo expiredAt tăng dần
+                        return i1.getExpiredAt().compareTo(i2.getExpiredAt());
+                    }
+                });
+
+                for (Inventory inventory : tempInventories) {
+                    ProductResponse product = productMapper.toDto(productRepository.findById(request.getProductId())
+                            .orElseThrow(() -> new CustomException(ErrorCode.PRODUCT_NOT_FOUND)));
+
+                    // Nếu số lượng inventory đủ để xuất thì thêm vào suggestedDetails
+                    if (inventory.getQuantity() >= quantityToExport) {
+                        suggestedDetails.add(new SuggestedExportProductsResponse(
+                                null,
+                                "Đủ hàng",
+                                product,
+                                quantityToExport,
+                                inventory.getExpiredAt(),
+                                inventory.getZone().getName()
+                        ));
+                        // Giảm số lượng inventory cần xuất
+                        //inventory.setQuantity(inventory.getQuantity() - quantityToExport);
+                        break;
+                    } else {
+                        // Nếu số lượng inventory không đủ để xuất thì lấy hết số lượng inventory đó -> giảm số lượng cần xuất -> lấy inventory tiếp theo
+                        suggestedDetails.add(new SuggestedExportProductsResponse(
+                                null,
+                                "Đủ hàng",
+                                product,
+                                inventory.getQuantity(),
+                                inventory.getExpiredAt(),
+                                inventory.getZone().getName()
+                        ));
+                        quantityToExport -= inventory.getQuantity();
+                    }
+                }
+            }
+            return new ResponseObject<>(HttpStatus.OK.value(), "Suggested export details", suggestedDetails);
+        } catch (CustomException e) {
+            return new ResponseObject<>(e.getErrorCode().getCode(), e.getMessage(), null);
+        } catch (Exception e) {
+            return new ResponseObject<>(HttpStatus.BAD_REQUEST.value(), "Failed to suggest export details", null);
+        }
+    }
 
     public ResponseObject<?> getExportDetailsByExportId(Integer exportId) {
         try {
@@ -203,7 +243,7 @@ public class ExportDetailService {
                         response.setProduct(productMapper.toDto(imp.getProduct()));
                         return response;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             return new ResponseObject<>(HttpStatus.OK.value(), "Export details retrieved successfully", responses);
         } catch (CustomException e) {
             return new ResponseObject<>(e.getErrorCode().getCode(), e.getMessage(), null);
